<resources>
    <string name="app_name">CarUp</string>
    <string name="full_name">Full Name</string>
    <string name="nickname">Nickname</string>
    <string name="location">Location</string>
    <string name="photo">Photo</string>
    <string name="use_the_camera_to_take_a_picture">Use the camera to take a picture</string>
    <string name="select_an_image_from_the_phone_gallery">Select an image from the phone gallery</string>
    <string name="save_data">Save data</string>
    <string name="full_name_txv">Full Name:</string>
    <string name="nickname_txv">Nickname:</string>
    <string name="email_address_txv">Email address:</string>
    <string name="postal_address_txv">Postal address:</string>
    <string name="saved_default_value">\"none\"</string>
    <string name="edit_full_name_land">Full name:</string>
    <string name="edit_nickname_and">Nickname:</string>
    <string name="edit_email_address_land">Email address:</string>
    <string name="edit_postal_address_land">Postal address</string>
    <string name="imagebutton">ImageButton</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="menu_trip_details">Trip details</string>
    <string name="menu_trip_edit">Edit your trip</string>
    <string name="menu_trip_list">Trip list</string>
    <string name="menu_trip_list_others">Book your trip</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="fullname">FullName</string>
    <string name="selYourPickup">Select your pick-up location</string>
    <string name="selYourDrop">Select your drop location</string>
    <string name="insert_full_name">Insert: full name</string>
    <string name="insert_location">Insert: Location</string>
    <string name="pickup_location">Pickup Location</string>
    <string name="drop_location">Drop Location</string>
    <string name="xx">XX</string>
    <string name="_25">25</string>
    <string name="available_seats">Available Seats</string>
    <string name="name_surname">Name Surname</string>
    <string name="insert_year_month_day">Insert: year/month/day</string>
    <string name="price">Price</string>
    <string name="car_photo">Car Photo:</string>
    <string name="click_day_month_year"><![CDATA[<- Click: day/month/year]]></string>
    <string name="edit_your_data">Edit your data</string>
    <string name="xx_xx">xx:xx</string>
    <string name="trip_details">Trip details</string>
    <string name="fulname">FulName</string>
    <string name="date">Date</string>
    <string name="xx_xx_xx">xx/xx/xx</string>
    <string name="additional_information">Additional Information</string>
    <string name="type_here">Type here:</string>
    <string name="dd_mm_yyyy">dd/mm/yyyy</string>
    <string name="hh_mm">hh:mm</string>
    <string name="insert_price">Insert: price</string>
    <string name="insert_ava_seats">Insert: Ava seats</string>
    <string name="insert_additional_info">Insert: additional info</string>
    <string name="car">Car</string>
    <string name="delete">Delete your trip</string>
    <string name="title_delete">Do you really want to delete it?</string>
    <string name="decline">CANCEL</string>
    <string name="accept">ACCEPT</string>
    <string name="delete_sure">DELETE</string>
    <string name="my_profile">My profile</string>
    <string name="data">Date</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="trip_list_of_other_users">Available trips</string>
    <string name="search">Search</string>
    <string name="my_trip_list">My trip list</string>
    <string name="maximum_price">Maximum price</string>
    <string name="minimum_available_seats">Minimum available seats</string>
    <string name="enter_the_data_to_search_for_the_most_suitable_trip_for_you">Enter the date to search for the most suitable trip for you</string>
    <string name="from_hour">From hour</string>
    <string name="to_hour">To hour</string>
    <string name="logout">Logout</string>
    <string name="email">Email</string>
    <string name="age">Age</string>
</resources>