<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="@color/purple_700"
    android:gravity="bottom|left"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/nav_header_profile_img"
        android:layout_width="70dp"
        android:layout_height="0dp"
        android:layout_gravity="start"
        android:layout_marginTop="16dp"
        android:layout_weight="3"
        android:contentDescription="@string/nav_header_desc"
        android:gravity="start"
        android:paddingTop="16dp"
        app:srcCompat="@mipmap/ic_user_yellow_round" />

    <TextView
        android:id="@+id/nav_head_full_name"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="bottom"
        android:text="@string/full_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

    <TextView
        android:id="@+id/nav_header_email"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/email" />
</LinearLayout>