<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" >
<LinearLayout

    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    android:gravity="right|top">



    <!--
                    -In questa sezione sono stati inseiriti elementi di tipo EditText anzichè di tipo Textview,  ciò che li differisce è l'attributo
                     "android:inputType" che permette al sistema di fornire un appropriato metodo di input. Per esempio, se l'inputType è una password
                     numerica, il sistema offre un tastierino numerico come metodo di input, se l'inputType è un nome, il sistema offre la tastiera completa.

                    -La proprità "textCapSentences" nell'attributo "android:inputType" setta automaticamente la prima lettere in maiuscolo.

                    -Il metodo android:imeOptions="actionNext" permette di avere una tastiera con un tasto di default "Next" per i campi intermedi e
                     il metodo android:imeOptions="actionDone" permette di avere una tastiera con un tasto di default "Done" per l'ultimo campo

                -->

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:srcCompat="@android:drawable/ic_menu_camera"
        android:contentDescription="@string/imagebutton" />


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginHorizontal="50dp"
        android:contentDescription="@string/photo"
        app:srcCompat="@drawable/ic_user1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="16dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/full_name_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/full_name_txv"
            android:textAppearance="@style/TextAppearance.AppCompat.Small" />

        <EditText
            android:id="@+id/editTextFullName"
            style="@style/Widget.AppCompat.AutoCompleteTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:fontFamily="sans-serif"
            android:gravity="center|start"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="textCapSentences|textPersonName"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <TextView
            android:id="@+id/nickname_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nickname_txv"
            android:textAppearance="@style/TextAppearance.AppCompat.Small" />

        <EditText
            android:id="@+id/editTextNickName"
            style="@style/Widget.AppCompat.EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:fontFamily="sans-serif"
            android:gravity="center|start"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <TextView
            android:id="@+id/age_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/age"
            android:textAppearance="@style/TextAppearance.AppCompat.Small" />

        <EditText
            android:id="@+id/editTextAge"
            style="@style/Widget.AppCompat.EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:fontFamily="sans-serif"
            android:gravity="center|start"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="number"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
        <TextView
            android:id="@+id/email_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email_address_txv"
            android:textAppearance="@style/TextAppearance.AppCompat.Small" />

        <EditText
            android:id="@+id/editTextEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:gravity="center|start"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <TextView
            android:id="@+id/posta_addr_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/postal_address_txv"
            android:textAppearance="@style/TextAppearance.AppCompat.Small" />

        <EditText
            android:id="@+id/editTextPostalAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:gravity="center|start"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:inputType="textPostalAddress"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    </LinearLayout>


</LinearLayout>

</ScrollView>
